Fix mobile spacing

--- a/client/styles/typeahead.scss
+++ b/client/styles/typeahead.scss
@@ -88,7 +88,7 @@ $option-font-size: 20px;
   text-transform: uppercase;
   color: rgba(255,255,255,0.4);
   font-size: $option-font-size;
-  min-height: 1.7em;
+  min-height: 2em;
   text-decoration: none;
   margin-right: 0;
   margin-left: auto;
